// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchIcon /> default matches the snapshot 1`] = `
<svg
  aria-label="Search"
  height="10"
  role="img"
  viewBox="-0.7 -0.7 18 18"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Search
  </title>
  <circle
    cx="7"
    cy="7"
    fill="none"
    r="7"
    stroke="#333"
    strokeWidth="1.1"
  />
  <path
    d="M13 11 L17 15 L15.5 16.5 L11.5 12.7z"
    fill="#333"
  />
</svg>
`;

exports[`<SearchIcon /> with some props matches the snapshot 1`] = `
<svg
  aria-label="Search"
  height="10"
  role="img"
  viewBox="-0.7 -0.7 18 18"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Search
  </title>
  <circle
    className="circle-class"
    cx="7"
    cy="7"
    fill="none"
    r="7"
    stroke="red"
    strokeWidth="1.1"
  />
  <path
    className="path-class"
    d="M13 11 L17 15 L15.5 16.5 L11.5 12.7z"
    fill="red"
  />
</svg>
`;

exports[`<SearchIcon /> with some props with no \`title\` matches the snapshot 1`] = `
<svg
  aria-label="Search"
  height="10"
  role="img"
  viewBox="-0.7 -0.7 18 18"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Search
  </title>
  <circle
    cx="7"
    cy="7"
    fill="none"
    r="7"
    stroke="#333"
    strokeWidth="1.1"
  />
  <path
    d="M13 11 L17 15 L15.5 16.5 L11.5 12.7z"
    fill="#333"
  />
</svg>
`;
